Resets the state of magnetic lasso when deactivated

BUG: 413035